fixed spacing for nicer layout

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 img {
     border-radius: 50%;
-    margin-top: 150px;
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -23,32 +23,32 @@ h2 {
     color:turquoise;
     font-size: 35px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding-top: 30px;
 }
 
 p {
     color: white;
-    font-size: 20px;
-    padding-top: 30px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    margin:50px;
 }
 
 ul {
     list-style: disc;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:white;
-    padding-top: 30px;
     font-size: 20px;
     margin:50px;
 }
 
 ol {
     list-style: disc;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:white;
-    padding-top: 30px;
     font-size: 20px;
     margin:50px;
 }
 
 footer {
     color:turquoise;
-    padding-top: 200px;
+    bottom: 0;
 }
